ux and post fixes

--- a/src/app/components/patient-demographics/patient-demographics.component.html
+++ b/src/app/components/patient-demographics/patient-demographics.component.html
@@ -33,13 +33,19 @@ TODO:
     </div>
     <div class="col" style="border-style: solid; border-width: thin; padding: 0.5em">
       <div class="col">Insurance Coverage:</div>
-      <div class="col">{{ insuranceProvider?.name }}</div>
-      <div class="col">{{ insuranceProvider?.address?.[0]?.line?.[0] }}</div>
-      <div class="col">
-        {{ insuranceProvider?.address?.[0]?.city ?insuranceProvider?.address?.[0]?.city + ',' : '' }}
-        {{ insuranceProvider?.address?.[0]?.state ? insuranceProvider?.address?.[0]?.state + ',' : '' }}
-        {{ insuranceProvider?.address?.[0]?.postalCode || ''}}
-      </div>
+      <div *ngIf="insuranceProvider; then insuranceFound else noInsuranceFound"></div>
+      <ng-template #insuranceFound>
+        <div class="col">{{ insuranceProvider?.name }}</div>
+        <div class="col">{{ insuranceProvider?.address?.[0]?.line?.[0] }}</div>
+        <div class="col">
+          {{ insuranceProvider?.address?.[0]?.city ?insuranceProvider?.address?.[0]?.city + ',' : '' }}
+          {{ insuranceProvider?.address?.[0]?.state ? insuranceProvider?.address?.[0]?.state + ',' : '' }}
+          {{ insuranceProvider?.address?.[0]?.postalCode || ''}}
+        </div>
+      </ng-template>
+      <ng-template #noInsuranceFound>
+        <span><em>No Insurance Coverage Found</em></span>
+      </ng-template>
     </div>
   </div>
 </div>
