--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,21 @@
 
     <mat-toolbar style="background-color: #002171; color: white">
       <span style="cursor: pointer"  [routerLink]="'/'">BSeR Referral Manager</span>
-      <span> | (ADD SPACER HERE) | </span>
-      <button mat-raised-button  [routerLink]="'/servicerequesttest'">TEST SERVICE REQUEST</button>
-      <button mat-raised-button  [routerLink]="'/register'">Register Service Provider</button>
+      <span class="spacer"></span>
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item [routerLink]="'/register'">
+          <span>Manage Service Providers</span>
+        </button>
+        <mat-divider></mat-divider>
+        <button mat-menu-item onclick="window.open('https://github.com/BSeR-PoC/bser-ui/wiki','_blank')">
+          <span>About/Wiki</span>
+        </button>
+      </mat-menu>
+
+
     </mat-toolbar>
 
     <app-patient-demographics></app-patient-demographics>
