--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <div class="header">
 
-    <mat-toolbar style="background-color: #002171; color: white">
+    <mat-toolbar color=primary style="color: white">
       <span style="cursor: pointer"  [routerLink]="'/'">BSeR Referral Manager</span>
       <span class="spacer"></span>
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
