--- a/src/app/components/patient-demographics/patient-demographics.component.html
+++ b/src/app/components/patient-demographics/patient-demographics.component.html
@@ -4,31 +4,42 @@ TODO:
 2. Load Content dynamically from the api
 -->
 
-<div style="background-color: #0d47a1; color: white;">
+<div class="patient-header">
   <div class="row container" style="font-size: large; padding-top: 1em;">
-    <div class="col">{{ patient?.name[0]?.family }}, {{ patient?.name[0]?.given[0] }}</div>
+    <div class="col patient-name">
+      <span class="patient-name">
+        {{ patient?.name[0]?.family }}, {{ patient?.name[0]?.given[0] }}
+      </span>
+      <span class="horizontal-divider"></span>
+
+      <span class="patient-header-label">Gender:</span>
+        <span class="patient-header-value">{{ (patient?.gender || '').toString() | titlecase }}</span>
+        <span class="horizontal-divider"></span>
+        <span class="patient-header-label">Marital Status:</span>
+        <span class="patient-header-value">
+          {{ ( patient?.maritalStatus?.text || patient?.maritalStatus?.coding?.[0]?.display || patient?.maritalStatus?.coding?.[0]?.code || '').toString() | titlecase}}
+        </span>
+        <span class="horizontal-divider"></span>
+        <span class="patient-header-label">Date of Birth:</span>
+        <span class="patient-header-value">{{ (stringToDate(patient?.birthDate?.toString()) | date ) || ''}}</span>
+    </div>
   </div>
   <div class="row container" style="padding-top: 1em; padding-bottom: 1em">
     <div class="col">
-      Gender: {{ (patient?.gender || '').toString() | titlecase }}<br/>
-      Marital Status: {{ ( patient?.maritalStatus?.text
-                          || patient?.maritalStatus?.coding?.[0]?.display
-                          || patient?.maritalStatus?.coding?.[0]?.code
-                          || '')
-                        .toString() | titlecase
-                      }} <br/>
-      Date of Birth: {{ (stringToDate(patient?.birthDate?.toString()) | date ) || ''}}<br/>
-    </div>
-    <div class="col">
-      Address:<br/>
+      <span class="patient-header-label-no-padding">Address</span>
+      <mat-divider class="patient-header-break"></mat-divider>
       <span *ngIf="patient?.address[0]?.use">{{ patient?.address[0]?.use }}<br/></span>
       {{ patient?.address[0]?.line[0] }}<br/>
       {{ patient?.address[0]?.city }}, {{ patient?.address[0]?.state }},  {{ patient?.address[0]?.postalCode }}
     </div>
-    <div class="col">Contact Information:
+    <div class="col">
+      <span class="patient-header-label-no-padding">Contact Information</span>
+      <mat-divider class="patient-header-break"></mat-divider>
       <app-telecom [telecom]="patient?.telecom"></app-telecom>
     </div>
-    <div class="col" *ngFor="let language of getLanguageList(patient)">Language(s):<br/>
+    <div class="col" *ngFor="let language of getLanguageList(patient)">
+      <span class="patient-header-label-no-padding">Language(s)</span>
+      <mat-divider class="patient-header-break"></mat-divider>
       {{ language }}<br/>
     </div>
     <div class="col" style="border-style: solid; border-width: thin; padding: 0.5em">
