--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --primary50: #e8eaf6;
+  --primary100: #c5cae9;
+  --primary200: #9fa8da;
+  --primary300: #7986cb;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
