--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,3 +101,23 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-simple-snackbar {
   color: whitesmoke !important;
 }
+
+.spinner-container {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 40%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+}
+
+.overlay{
+  height:100vh;
+  width:100%;
+  background-color:rgba(0, 0, 0, 0.010);
+  z-index:    10;
+  top:        0;
+  left:       0;
+  position:   fixed;
+}
