review-and-send

--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -32,6 +32,14 @@
     <mat-card style="margin-top: 2em">
       <mat-card-title>Additional Patient Demographics</mat-card-title>
       <mat-card-content>
+        <div class="row"></div>
+        <div class="row" style="margin-top: 1em">
+          <div class="note">
+            <b>Note:</b> &nbsp; Changing values here will not update the Patient's information in the source system, but will
+            allow corrections in what is sent to the Service Provider. This may also be used to obscure data being sent to
+            third parties if needed.
+          </div>
+        </div>
         <div class="row" style="margin-top: 1em">
 
           <!-- Select Race controls  -->
