--- a/src/app/components/review-and-send/review-and-send.component.html
+++ b/src/app/components/review-and-send/review-and-send.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="scrollable-container">
   <mat-card>
     <mat-card-title>Review and Submit</mat-card-title>
@@ -73,16 +74,9 @@
 
         <div class="row top-spacer"> General Information and Service type</div>
         <div class="row">Service Type: {{ getValueCodeParam(currentParameters, 'serviceType')?.display }}</div>
-        <div class="row">Education Level: {{ getValueCodeParam(currentParameters, 'educationLevel')?.display }}</div>
-        <div class="row">Employment Status: {{ getValueCodeParam(currentParameters, 'employmentStatus')?.display }}</div>
-        <div class="row">Ethnicity: {{ getValueCodeParam(currentParameters,'ethnicity')?.display }}</div>
-        <div class="row">Race: {{ getValueCodeParam(currentParameters, 'race') }}</div>
+
 
         <div class="row top-spacer"> Supporting Information</div>
-        <div class="row">Patient Height: {{ getValueCodeParam(currentParameters, 'bodyHeight') }}</div>
-        <div class="row">Patient Weight: {{ getValueCodeParam(currentParameters, 'bodyWeight') }}</div>
-        <div class="row">BMI: {{ getValueCodeParam(currentParameters, 'bmi') }}</div>
-        <div class="row">Blood Pressure: {{ getValueCodeParam(currentParameters, 'bloodPressure') }}</div>
 
         <div class="top-spacer">
           <h2> Selected Service Provider </h2>
@@ -108,11 +102,90 @@
     </mat-card-content>
   </mat-card>
 
+</div>-->
+
+<div class="scrollable-container">
+  <h1>Review and Submit</h1>
+
+  <div class="note">
+    Please review the information selected carefully before submitting the referral request to the Service Provider.
+  </div>
+  <div class="row">
+    <div class="col">
+      <mat-card class="mat-card-summary">
+        <mat-card-header class="mat-card-summary-header">
+          <mat-card-title class="mat-card-summary-title">Service Details</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="mat-card-summary-content">
+          <div class="row">
+            <div class="col label big-label">
+              Service Provider:
+            </div>
+            <div class="col value big-value">
+              <ng-container *ngIf="selectedServiceProvider">
+                <span *ngIf="selectedServiceProvider.practitioner?.familyName; then practitionerFound else noPractitionerFound"></span>
+                <ng-template #practitionerFound>
+                  {{selectedServiceProvider.practitioner?.familyName}}, {{selectedServiceProvider.practitioner?.givenName}} ({{selectedServiceProvider.organization?.name}})
+                </ng-template>
+                <ng-template #noPractitionerFound>
+                  {{selectedServiceProvider.organization?.name}}
+                </ng-template>
+              </ng-container>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col label">
+              Service Type:
+            </div>
+            <div class="col value">
+              {{ getValueCodeParam(currentParameters, 'serviceType')?.display }}
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="divider">
+    </div>
+    <div class="col">
+      <mat-card class="mat-card-summary">
+        <mat-card-header class="mat-card-summary-header">
+          <mat-card-title class="mat-card-summary-title">General Information</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="mat-card-summary-content">
+          <div class="row">
+            <div class="col label">
+              Race:
+            </div>
+            <div class="col value col-grow">
+              {{ getValueCodeParam(currentParameters, 'race') }}
+            </div>
+          </div>
+          <div class="row">Ethnicity: {{ getValueCodeParam(currentParameters,'ethnicity')?.display }}</div>
+          <div class="row">Education Level: {{ getValueCodeParam(currentParameters, 'educationLevel')?.display }}</div>
+          <div class="row">Employment Status: {{ getValueCodeParam(currentParameters, 'employmentStatus')?.display }}</div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="row top-spacer">
+    <mat-card class="mat-card-summary">
+      <mat-card-header class="mat-card-summary-header">
+        <mat-card-title class="mat-card-summary-title">Supporting Information</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="mat-card-summary-content">
+        <div class="row">Patient Height: {{ getValueCodeParam(currentParameters, 'bodyHeight') }}</div>
+        <div class="row">Patient Weight: {{ getValueCodeParam(currentParameters, 'bodyWeight') }}</div>
+        <div class="row">BMI: {{ getValueCodeParam(currentParameters, 'bmi') }}</div>
+        <div class="row">Blood Pressure: {{ getValueCodeParam(currentParameters, 'bloodPressure') }}</div>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
 
-  <div class="row-button-wrapper">
-    <button mat-raised-button (click)="onCancel()">Cancel</button>
-    <span class="spacer"></span>
-    <button mat-raised-button (click)="onSendReferral()">Send Referral</button>
-  </div>
+<div class="row-button-wrapper">
+  <button mat-raised-button (click)="onCancel()">Cancel</button>
+  <span class="spacer"></span>
+  <button mat-raised-button (click)="onSendReferral()">Send Referral</button>
+</div>
 
