pushed minor fixes to the UI

--- a/src/app/components/review-and-send/review-and-send.component.html
+++ b/src/app/components/review-and-send/review-and-send.component.html
@@ -113,6 +113,6 @@
   <div class="row-button-wrapper">
     <button mat-raised-button (click)="onCancel()">Cancel</button>
     <span class="spacer"></span>
-    <button mat-raised-button (click)="onSendReferral()">Send Referral</button>
+    <button mat-raised-button  color="primary" (click)="onSendReferral()">Send Referral</button>
   </div>
 
