--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -44,7 +44,7 @@
   <button mat-raised-button (click)="onCancel()">Cancel</button>
   <span class="spacer"></span>
   <button mat-raised-button (click)="onSave(false)" [disabled]="!selectedServiceProvider">Save</button>
-  <button mat-raised-button (click)="onSave(true)" [disabled]="!selectedServiceProvider"
+  <button mat-raised-button color="primary" (click)="onSave(true)" [disabled]="!selectedServiceProvider"
           style="margin-left: 1em">
     Save and Continue
   </button>
