--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,3 +121,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   left:       0;
   position:   fixed;
 }
+
+.top-bottom-spacer{
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
