--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin-top: 1em;
   border-style: solid;
   border-width: 1px;
-  border-color: #eceff1
+  border-color: #eceff1;
 }
 
 .row-button-wrapper {
@@ -125,4 +125,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .top-bottom-spacer{
   margin-top: 1em;
   margin-bottom: 1em;
+}
+
+.error-message{
+  background-color: #F44336;
+}
+.mat-simple-snackbar-action {
+  color: white;
 }
