--- a/src/app/components/review-and-send/review-and-send.component.scss
+++ b/src/app/components/review-and-send/review-and-send.component.scss
@@ -8,16 +8,15 @@
 
 .label {
   font-weight: bold;
-  font-size: medium;
+  font-size: small;
   justify-content: flex-end;
   text-align: right;
   padding: 0.5em;
-  white-space: nowrap;
 }
 
 .value {
   padding: 0.5em;
-  font-size: medium;
+  font-size: small;
 }
 
 .big-label {
