--- a/src/app/components/supporting-information/supporting-information.component.html
+++ b/src/app/components/supporting-information/supporting-information.component.html
@@ -58,6 +58,16 @@
       </div>
     </div>
 
+    <div class="col">
+
+      <mat-form-field appearance="outline">
+        <mat-label>HA1C</mat-label>
+        <span matSuffix>%</span>
+        <input matInput type="number" formControlName="ha1c">
+      </mat-form-field>
+
+    </div>
+
   </form>
 
 </div>
