--- a/src/app/components/review-and-send/review-and-send.component.html
+++ b/src/app/components/review-and-send/review-and-send.component.html
@@ -176,6 +176,7 @@
         <div class="row">Patient Weight: {{ getValueCodeParam(currentParameters, 'bodyWeight') }}</div>
         <div class="row">BMI: {{ getValueCodeParam(currentParameters, 'bmi') }}</div>
         <div class="row">Blood Pressure: {{ getValueCodeParam(currentParameters, 'bloodPressure') }}</div>
+        <div class="row">Hemoglobin A1c: {{ getValueCodeParam(currentParameters, 'ha1c') }}%</div>
 
       </mat-card-content>
     </mat-card>
