--- a/src/app/components/review-and-send/review-and-send.component.html
+++ b/src/app/components/review-and-send/review-and-send.component.html
@@ -137,7 +137,7 @@
               HA1C:
             </div>
             <div class="col value col-grow">
-              {{ getValueCodeParam(currentParameters, 'bodyHeight') }}
+              {{ getValueCodeParam(currentParameters, 'ha1c') }}
             </div>
           </div>
         </mat-card-content>
