--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -39,3 +39,8 @@
   </mat-tab-group>
 
 </div>
+
+<!--<div class="overlay" *ngIf="isLoading">-->
+<!--  <div class="spinner-container"><mat-spinner [diameter]="70"></mat-spinner></div>-->
+<!--</div>-->
+
