Implemented proceed and return

--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -140,16 +140,16 @@
 
   </form>
 
-<!--  <pre>{{usCorePatient| json}}</pre>-->
 </div>
 
 <div class="row-button-wrapper">
-  <button mat-raised-button (click)="onCancel()">Cancel</button>
+  <button mat-raised-button (click)="onReturn()">Return to Select Recipient</button>
+  <button mat-raised-button (click)="onCancel()" style="margin-left: 1em">Cancel</button>
   <span class="spacer"></span>
   <button mat-raised-button (click)="onSave(false)">Save</button>
-  <button mat-raised-button color="primary" (click)="onSave(true)"
+  <button mat-raised-button color="primary" (click)="onProceed()"
           style="margin-left: 1em">
-    Save and Continue
+    Proceed
   </button>
 </div>
 
