--- a/src/app/components/review-and-send/review-and-send.component.html
+++ b/src/app/components/review-and-send/review-and-send.component.html
@@ -147,7 +147,8 @@
 </div>
 
 <div class="row-button-wrapper">
-  <button mat-raised-button (click)="onCancel()">Cancel</button>
+  <button mat-raised-button (click)="onReturn()">Return to Editing</button>
+  <button mat-raised-button (click)="onCancel()" style="margin-left: 1em">Cancel</button>
   <span class="spacer"></span>
   <button mat-raised-button (click)="onSendReferral()">Send Referral</button>
 </div>
