--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -44,8 +44,8 @@
   <button mat-raised-button (click)="onCancel()">Cancel</button>
   <span class="spacer"></span>
   <button mat-raised-button (click)="onSave(false)" [disabled]="!selectedServiceProvider">Save</button>
-  <button mat-raised-button color="primary" (click)="onSave(true)" [disabled]="!selectedServiceProvider"
+  <button mat-raised-button color="primary" [disabled]="!selectedServiceProvider" (click)="onProceed()"
           style="margin-left: 1em">
-    Save and Continue
+    Proceed
   </button>
 </div>
