--- a/src/app/components/supporting-information/supporting-information.component.html
+++ b/src/app/components/supporting-information/supporting-information.component.html
@@ -84,12 +84,12 @@
 </div>
 
 <div class="row-button-wrapper">
-  <button mat-raised-button (click)="onCancel()">Cancel</button>
+  <button mat-raised-button (click)="onReturn()">Return to General Information</button>
+  <button mat-raised-button style="margin-left: 1em" (click)="onCancel()">Cancel</button>
   <span class="spacer"></span>
   <button mat-raised-button (click)="onSave(false)">Save</button>
-  <button mat-raised-button  color="primary" (click)="onSave(true)"
+  <button mat-raised-button color="primary" (click)="onProceed()"
           style="margin-left: 1em">
-    Save and Continue
+    Proceed
   </button>
 </div>
-
