Improved the stepper transition.

--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -146,7 +146,7 @@
   <button mat-raised-button (click)="onReturn()">Return to Select Recipient</button>
   <button mat-raised-button (click)="onCancel()" style="margin-left: 1em">Cancel</button>
   <span class="spacer"></span>
-  <button mat-raised-button (click)="onSave(false)">Save</button>
+  <button mat-raised-button (click)="onSave()">Save</button>
   <button mat-raised-button color="primary" (click)="onProceed()"
           style="margin-left: 1em">
     Proceed
