--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,3 +140,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-simple-snackbar-action {
   color: white;
 }
+
+.mat-horizontal-stepper-header {
+  pointer-events: none !important;
+}
