Service request status type enum created

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,6 +1,8 @@
 <div class="container top-spacer">
   <div class="controls">
-    <div style="font-size: large">Active Referrals and Drafts</div>
+    <div style="font-size: large">
+      {{ selectedServiceRequestType }} Service Requests
+    </div>
     <div class="spacer"></div>
     <button mat-raised-button color="primary" [routerLink]="['/referral-manager']">
       <mat-icon>add</mat-icon>
@@ -8,7 +10,7 @@
     </button>
   </div>
 
-  <mat-tab-group class="mat-elevation-z4">
+  <mat-tab-group class="mat-elevation-z4" (selectedIndexChange)="onClick($event)">
     <mat-tab label="Draft {{ isLoading? '' : '(' + (draftServiceRequests?.length || 0) + ')' }}">
       <app-service-request-list
         [serviceRequest]="draftServiceRequests"
