--- a/src/app/components/service-request-list/service-request-list.component.html
+++ b/src/app/components/service-request-list/service-request-list.component.html
@@ -1,41 +1,39 @@
-<table mat-table [dataSource]="dataSource" style="margin-top: 1.5em">
+<table mat-table [dataSource]="dataSource" style="margin-top: 1.5em" matSort matSortActive="businessStatus" matSortDirection="asc">
 
   <ng-container matColumnDef="service">
-    <th mat-header-cell *matHeaderCellDef> Service</th>
-    <td mat-cell *matCellDef="let element"> {{element.service}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Service</th>
+    <td mat-cell *matCellDef="let element"> {{ element.service }}</td>
   </ng-container>
 
   <ng-container matColumnDef="serviceProvider">
-    <th mat-header-cell *matHeaderCellDef> Service Provider</th>
-    <td mat-cell *matCellDef="let element"> {{element.serviceProvider}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Service Provider</th>
+    <td mat-cell *matCellDef="let element"> {{ element.serviceProvider }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef> Status</th>
-    <td mat-cell *matCellDef="let element"> {{element.status | titlecase}} </td>
+  <ng-container matColumnDef="businessStatus">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
+    <td mat-cell *matCellDef="let element"> {{ element.businessStatus }}</td>
   </ng-container>
 
   <ng-container matColumnDef="dateCreated">
-    <th mat-header-cell *matHeaderCellDef> Date Created</th>
-    <td mat-cell *matCellDef="let element"> {{element.dateCreated | date : 'medium'}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date Created</th>
+    <td mat-cell *matCellDef="let element"> {{ element.dateCreated | date : 'medium' }}</td>
   </ng-container>
 
   <ng-container matColumnDef="lastUpdated">
-    <th mat-header-cell *matHeaderCellDef> Last Updated</th>
-    <td mat-cell *matCellDef="let element"> {{element.lastUpdated | date : 'medium'}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Updated</th>
+    <td mat-cell *matCellDef="let element"> {{ element.lastUpdated | date : 'medium' }}</td>
   </ng-container>
 
-  @if (serviceRequestType == ServiceRequestStatusType.draft) {
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions</th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-stroked-button color="primary" (click)="onEdit(element)">Edit</button>
-        <mat-icon color="accent" (click)="onDelete(element); $event.stopPropagation()" style="margin-left: 1em">
-          delete
-        </mat-icon>
-      </td>
-    </ng-container>
-  }
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-stroked-button color="primary" (click)="onEdit(element)">Edit</button>
+      <mat-icon color="accent" (click)="onDelete(element); $event.stopPropagation()" style="margin-left: 1em">
+        delete
+      </mat-icon>
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="cursor: pointer" (click)="onRowClick(row)"></tr>
@@ -52,3 +50,4 @@
   </ng-container>
 
 </table>
+<mat-paginator [pageSizeOptions]="[10, 25, 50]" aria-label="Select page of users"></mat-paginator>
