--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -1,11 +1,6 @@
-<p>active-referrals works!</p>
-<div>Service Provider:  </div>
-<div>Service Type: {{ serviceRequest?.orderDetail?.[0]?.coding?.[0]?.display }} </div>
-<div>Status: {{ taskResource?.businessStatus?.coding?.[0]?.display }}</div>
-<div>Created: </div>
-<div>Last Updated: </div>
+<div>Service Provider: Name: {{ serviceRequest?.serviceProvider?.name }} | Phone: {{ serviceRequest?.serviceProvider?.phone  }}</div>
+<div>Service Type: {{ serviceRequest?.service }} </div>
+<div>Status: {{ serviceRequest?.businessStatus }}</div>
+<div>Created: {{ serviceRequest?.dateCreated | date }}</div>
+<div>Last Updated: {{ serviceRequest?.dateCreated | date }}</div>
 <pre>{{ serviceRequest | json }}</pre>
-<div>Task Info:</div>
-<pre style="color: darkred">{{ taskResource | json }}</pre>
-<div>Supporting Info:</div>
-<pre>{{ supportingInfo | json }}</pre>
