--- a/src/app/components/service-request-list/service-request-list.component.html
+++ b/src/app/components/service-request-list/service-request-list.component.html
@@ -7,7 +7,7 @@
 
   <ng-container matColumnDef="serviceProvider">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Service Provider</th>
-    <td mat-cell *matCellDef="let element"> {{ element.serviceProvider }}</td>
+    <td mat-cell *matCellDef="let element"> {{ element.serviceProvider.name }}</td>
   </ng-container>
 
   <ng-container matColumnDef="businessStatus">
