implemented loading the service request data with a single call

--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -4,3 +4,4 @@
 <div>Created: {{ serviceRequest?.dateCreated | date }}</div>
 <div>Last Updated: {{ serviceRequest?.dateCreated | date }}</div>
 <pre>{{ serviceRequest | json }}</pre>
+<pre>{{ data | json}}</pre>
